--- a/css/ext.css
+++ b/css/ext.css
@@ -214,3 +214,40 @@ h4.style4 {
     display: none;
     z-index: 2;
 }
+
+.stepbox{
+    position:relative;
+    height:50px;
+    background:#FFF;
+    margin:40px auto;
+    cursor: pointer;
+}
+
+.stepbox h4{
+    text-align:center;
+    position:relative;
+    top:2px;
+}
+
+.effectStep
+{
+    position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.effectStep:before, .effectStep:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:50%;
+    bottom:0;
+    left:10px;
+    right:10px;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
