--- a/css/ext.css
+++ b/css/ext.css
@@ -230,6 +230,9 @@ h4.style4 {
     margin-left: -5px;
     margin-top: -10px;
 }
+.stepactive{
+    color: hsl(92, 93%, 37%) !important;
+}
 
 .stepbox h4{
     text-align:center;
