--- a/css/ext.css
+++ b/css/ext.css
@@ -347,3 +347,17 @@ h4.style4 {
     height: 80px;
     margin: 10px;
 }
+
+.mkFieldContainer{
+    position: relative;
+    clear: both;
+    height: 60px;
+    margin: 10px;
+    max-width: 200px;
+}
+.mkFieldBlock{
+    position: relative;
+    float: left;
+    height: 60px;
+    margin: 10px;
+}
