--- a/tenants/Bridgevine/assets/css/base.css
+++ b/tenants/Bridgevine/assets/css/base.css
@@ -390,3 +390,138 @@ table.table3 tr td table tr td { border:0; padding-top:3px; padding-bottom:3px; 
 	color:#999;
 }
 /* ---------------------------------------------------------------------------------------------------------------------------------------------- */
+
+
+
+/* ---------------------------------------------------------------------------------------------------------------------------------------------- */
+h2.style1 {
+	padding:0;
+	margin:0 0 15px 0;
+    color: #6b6b6b;
+    font-size: 34px;
+	line-height:40px;
+	font-family:'Open Sans', Arial, serif; 
+	font-weight:300; 
+}
+
+.box-5a {
+	margin:0 0 30px 0;
+}
+.box-5a h4 {
+	min-height:70px;
+	padding:0;
+	margin:0;
+    color: #666666;
+    font-size: 16px;
+	line-height:24px;
+	text-align:center;
+	font-family:'Open Sans', Arial, serif; 
+	font-weight:300; 
+}
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) { 
+	.box-5a h4 { min-height:70px; }
+}
+/* Landscape phone to portrait tablet */
+@media (max-width: 767px) {	
+	.box-5a h4 { min-height:90px; }
+}
+/* Landscape phones and down */
+@media (max-width: 480px) { 
+	.box-5a h4 { min-height:140px; }
+}
+.box-5a .t_image {
+	margin:0 0 15px 0;
+	background:#cacaca;
+	padding:2px;
+	-webkit-border-radius: 4px 4px 4px 4px;
+	border-radius: 4px 4px 4px 4px;
+}
+.box-5a .t_image img {
+	width:100%;
+	-webkit-border-radius: 4px 4px 4px 4px;
+	border-radius: 4px 4px 4px 4px;
+}
+.box-5a .select {
+	padding:4px 14px;
+	color:#fff;
+	font-size:16px;
+	line-height:20px;
+	text-transform:uppercase;
+	font-family:'Open Sans', Arial, serif; 
+	font-weight:400; 
+	text-shadow: -1px -1px 0 #2874af;
+	background: rgb(52,155,232);
+	background: -moz-linear-gradient(top,  rgba(52,155,232,1) 0%, rgba(39,113,174,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(52,155,232,1)), color-stop(100%,rgba(39,113,174,1)));
+	background: -webkit-linear-gradient(top,  rgba(52,155,232,1) 0%,rgba(39,113,174,1) 100%);
+	background: -o-linear-gradient(top,  rgba(52,155,232,1) 0%,rgba(39,113,174,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(52,155,232,1) 0%,rgba(39,113,174,1) 100%);
+	background: linear-gradient(to bottom,  rgba(52,155,232,1) 0%,rgba(39,113,174,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#349be8', endColorstr='#2771ae',GradientType=0 );
+	-webkit-border-radius: 4px 4px 4px 4px;
+	border-radius: 4px 4px 4px 4px;
+}
+/* ---------------------------------------------------------------------------------------------------------------------------------------------- */
+
+/* ---------------------------------------------------------------------------------------------------------------------------------------------- */
+.btn-continue1 {
+	color: #ffffff;
+	font-family:'Open Sans', Arial, serif; 
+	font-weight:400; 
+	text-shadow: -1px -1px 0 #c7880f;
+	background: rgb(255,190,21);
+	background: -moz-linear-gradient(top,  rgba(255,190,21,1) 0%, rgba(249,121,14,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,190,21,1)), color-stop(100%,rgba(249,121,14,1)));
+	background: -webkit-linear-gradient(top,  rgba(255,190,21,1) 0%,rgba(249,121,14,1) 100%);
+	background: -o-linear-gradient(top,  rgba(255,190,21,1) 0%,rgba(249,121,14,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(255,190,21,1) 0%,rgba(249,121,14,1) 100%);
+	background: linear-gradient(to bottom,  rgba(255,190,21,1) 0%,rgba(249,121,14,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffbe15', endColorstr='#f9790e',GradientType=0 );
+	border-color: #357ebd;
+	border:0;
+}
+.btn-continue1:hover,
+.btn-continue1:focus,
+.btn-continue1:active,
+.btn-continue1.active,
+.open .dropdown-toggle.btn-continue1 {
+	color: #ffffff;
+	background: #ffbe15;
+	border-color: #285e8e;
+	border:0;
+}
+
+.btn-skip1 {
+	color: #ffffff;
+	font-family:'Open Sans', Arial, serif; 
+	font-weight:400; 
+	text-shadow: -1px -1px 0 #929292;
+	background: rgb(182,182,182);
+	background: -moz-linear-gradient(top,  rgba(182,182,182,1) 0%, rgba(144,144,144,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(182,182,182,1)), color-stop(100%,rgba(144,144,144,1)));
+	background: -webkit-linear-gradient(top,  rgba(182,182,182,1) 0%,rgba(144,144,144,1) 100%);
+	background: -o-linear-gradient(top,  rgba(182,182,182,1) 0%,rgba(144,144,144,1) 100%);
+	background: -ms-linear-gradient(top,  rgba(182,182,182,1) 0%,rgba(144,144,144,1) 100%);
+	background: linear-gradient(to bottom,  rgba(182,182,182,1) 0%,rgba(144,144,144,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b6b6b6', endColorstr='#909090',GradientType=0 );
+	border-color: #357ebd;
+	border:0;
+}
+.btn-skip1:hover,
+.btn-skip1:focus,
+.btn-skip1:active,
+.btn-skip1.active,
+.open .dropdown-toggle.btn-skip1 {
+	color: #ffffff;
+	background: #b6b6b6;
+	border-color: #285e8e;
+	border:0;
+}
+
+.btn-continue1.btn-lg,
+.btn-skip1.btn-lg {
+	padding-top:16px;
+	padding-bottom:16px;
+}
+/* ---------------------------------------------------------------------------------------------------------------------------------------------- */
